--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 v0.0.1, 12/11/2012 -- Initial release.
 v0.0.2, 12/11/2012 -- Worked out what to do with the license string :(
+v0.1.0, 13/11/2012 -- Added support for domtblout
