--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,3 +2,4 @@ v0.0.1, 12/11/2012 -- Initial release.
 v0.0.2, 12/11/2012 -- Worked out what to do with the license string :(
 v0.1.0, 13/11/2012 -- Added support for domtblout
 v0.2.0, 14/11/2012 -- Added support for making alignments
+v0.2.0, 15/11/2012 -- Minor bug fixes
