--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,3 +3,4 @@ v0.0.2, 12/11/2012 -- Worked out what to do with the license string :(
 v0.1.0, 13/11/2012 -- Added support for domtblout
 v0.2.0, 14/11/2012 -- Added support for making alignments
 v0.2.0, 15/11/2012 -- Minor bug fixes
+v0.2.2, 26/11/2012 -- Added Connors model parser
